# play-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  bot.py  config.yaml  docker-compose.yml  package-lock.json  package.json  player.py  pyproject.toml  queue_manager.py  search.py  views.py  wrangler.jsonc
.github/: AGENTS.md
.github/workflows/: AGENTS.md  deploy.yml
legal/: AGENTS.md  index.html  privacy.html  styles.css  terms.html
scripts/: AGENTS.md  build-web.mjs  deploy.sh  qa-manifest.mjs  qa-manifest.schema.json  qa-safety.mjs  qa-task.mjs  run-browser-tests.mjs  run-node-tests.mjs  run-node-tests.test.mjs
src/: AGENTS.md  autoplay.js  autoplay.test.js  botApi.js  botApi.test.js  deploy.js  helpCommand.test.js  index.js  normalize.js  normalize.test.js  permissions.js  permissions.test.js  player.js  player.test.js  queue.js  queue.test.js  queueEditorInteractions.js  queueEditorInteractions.test.js  queueEditorView.js  recommendFlow.js  recommendFlow.test.js  search.js  search.test.js  sessions.js  sessions.test.js  settings.js  settings.test.js  views.js  webClient.js  webClient.test.js  webPermission.js  webPermission.test.js
src/commands/: AGENTS.md  autoplay.js  bitrate.js  help.js  help.test.js  leave.js  loop.js  normalize.js  nowplaying.js  pause.js  play.js  queue.js  resume.js  shuffle.js  skip.js  stop.js  volume.js
src/db/: AGENTS.md  crypto.js  crypto.test.js  (+5 more)
test/: AGENTS.md
tests/: test_search.py
web/: AGENTS.md  index.html  tsconfig.json  vite.config.js  vitest.config.js
(+93 files in other folders)
