[project]
name = "music-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "py-cord[voice]>=2.6",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
